// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EditBounce default bounce toggle renders correctly if assigned to subaccount and feature flag is true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions for this subaccount will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Default bounce domain 
       for Subaccount 101
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Default bounce domain 
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true except allowSubaccount 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Default bounce domain 
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce does not show root domain warning for 3rd level domain 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left>
    <p>
      To use this domain for bounces, connect your domain by setting the required DNS record(s) and verifying the connection.
    </p>
  </Left>
  <Right>
    <Connect(BounceSetupInstructionPanel)
      domain={
        Object {
          "is_default_bounce_domain": false,
          "status": Object {
            "cname_status": null,
            "dkim_status": null,
            "mx_status": null,
            "ownership_verified": null,
          },
          "subaccount_id": 100,
        }
      }
    />
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders not ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left>
    <p>
      To use this domain for bounces, connect your domain by setting the required DNS record(s) and verifying the connection.
    </p>
  </Left>
  <Right>
    <Banner
      status="warning"
    >
      We strongly recommend using a subdomain such as 
      <strong>
        bounces.
        xyz.com
      </strong>
       for bounce domains. 
      <Link
        to="/account/sending-domains/create"
      >
        Create a new domain now.
      </Link>
    </Banner>
    <Connect(BounceSetupInstructionPanel)
      domain={
        Object {
          "is_default_bounce_domain": false,
          "status": Object {
            "cname_status": null,
            "dkim_status": null,
            "mx_status": null,
            "ownership_verified": null,
          },
          "subaccount_id": 100,
        }
      }
    />
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left />
  <Right>
    <Banner
      status="warning"
    >
      We strongly recommend using a subdomain such as 
      <strong>
        bounces.
        xyz.com
      </strong>
       for bounce domains. 
      <Link
        to="/account/sending-domains/create"
      >
        Create a new domain now.
      </Link>
    </Banner>
    <Connect(BounceSetupInstructionPanel)
      domain={
        Object {
          "status": Object {
            "cname_status": "valid",
          },
        }
      }
    />
  </Right>
</SendingDomainSection>
`;
